--- a/templates/home.html
+++ b/templates/home.html
@@ -10,8 +10,8 @@
 <h1>{{.Title}}
 </header>
 <p>Log in here</p>
-<input id="username" class="login">Username</input>
-<input id="password" class="login">Password</input>
+<input placeholder="Username" id="username" class="login"></input><br />
+<input id="password" class="login" type="password" placeholder="Password" autocomplete="currentpassword"></input><br />
 <button id="submitBtn" class="submit">Log in</button>
 <script src="/static/login.js"></script>
 <footer>
